--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,5 +1,6 @@
 @use "resets";
 @use "variables" as *;
+@use "footer";
 
 // import fonts
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
@@ -26,11 +27,11 @@ header {
     margin: 0 auto;
 }
 
-footer {
-    background-color: $footer-bgc;
-    width: 100%;
-    margin: 0 auto;
-}
+// footer {
+//     background-color: $footer-bgc;
+//     width: 100%;
+//     margin: 0 auto;
+// }
 
 // button {
 //     font-family: $font;
