--- a/dev/scss/_links.scss
+++ b/dev/scss/_links.scss
@@ -2,7 +2,12 @@
 
 .SocialLinks {
     width: 85%;
+    padding: 2rem 0;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 2rem;
     a {
         text-decoration: none;
         font-weight: 600;
@@ -15,23 +20,30 @@
     .EmailAndLinkContainer {
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        row-gap: 2rem;
 
         .SocialLinksContainer {
-            
-            i::before {
-                align-content: center;
-                text-align: center;
-                display: inline-block;
+            a {
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
                 height: 30px;
                 width: 30px;
                 border-radius: 50%;
                 background-color: black;
-                z-index: 0;
-            }
-            i {
-                position: relative;
                 color: white;
-                z-index: 1;
+                text-align: center;
+                margin-right: 5px;
+                
+                &:first-child i {
+                    transform: translateX(-2px);
+                }
+
+                i {
+                    margin: 0;
+                }                
             }
         }
 
