--- a/dev/scss/_video.scss
+++ b/dev/scss/_video.scss
@@ -46,55 +46,59 @@
 
 /* Video Modal
 -----------------------------------------*/
-.video-modal,
-.video-modal .overlay {
+.video-modal {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     z-index: 3000;
+
+    overflow: hidden;
+    position: fixed;
+    opacity: 0.0;
+
+    -webkit-transform: translate(500%,0%);
+    transform: translate(500%,0%);
+
+    -webkit-transition: -webkit-transform 0s linear 0s;
+    transition: transform 0s linear 0s;
+
+
+    /* using flexbox for vertical centering */
+
+    /* Flexbox display */
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+
+    /* Vertical alignment */
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+
+    .overlay {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 0;
+
+        background: rgba(255, 255, 255, 0.82); /* overlay color */
+
+        opacity: 0.0;
+      
+        -webkit-transition: opacity 0.2s ease-out 0.05s;
+        transition: opacity 0.2s ease-out 0.05s;
+    }
 }
-.video-modal {
-	overflow: hidden;
-	position: fixed;
-	opacity: 0.0;
-
-  -webkit-transform: translate(500%,0%);
-  transform: translate(500%,0%);
-
-  -webkit-transition: -webkit-transform 0s linear 0s;
-  transition: transform 0s linear 0s;
-
-
-  /* using flexbox for vertical centering */
-
-  /* Flexbox display */
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-
-  /* Vertical alignment */
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-}
-.video-modal .overlay {
-  z-index: 0;
-  background: rgba(255, 255, 255, 0.82); /* overlay color */
-
-  opacity: 0.0;
-
-  -webkit-transition: opacity 0.2s ease-out 0.05s;
-  transition: opacity 0.2s ease-out 0.05s;
-}
-
 
 .video-modal-content {
 	position: relative;
@@ -118,20 +122,20 @@
 /* Scaling to fit within the current Viewport size:
    When viewport aspect ratio is greater than 16:9
    work off the height instead of the width for calc */
- @media (min-aspect-ratio: 16/9) {
-  .video-modal-content {
-    width: 0;
-    height: calc(100vh - 10em);
-    padding-top: 0;
-    padding-left: calc((100vh - 10em) * 1.7778); /* 16:9 calc */
-  }
+@media (min-aspect-ratio: 16/9) {
+    .video-modal-content {
+        width: 0;
+        height: calc(100vh - 10em);
+        padding-top: 0;
+        padding-left: calc((100vh - 10em) * 1.7778); /* 16:9 calc */
+    }
 }
 
 /* Mobile Layout Tweaks - side margins reduced */
 @media (max-width: 640px) {
 	.video-modal-content {
 		width: calc(100% - 1em);
-    padding-top: calc((100% - 1em) * 0.5625); /* 16:9 calc */
+        padding-top: calc((100% - 1em) * 0.5625); /* 16:9 calc */
 	}
 }
 
@@ -163,16 +167,20 @@
 
 /* show the modal: 
    add class to the body to reveal */
-.show-video-modal .video-modal {
+.show-video-modal 
+    .video-modal {
 	opacity: 1.0;
-
 	transform: translate(0%,0%);
 	-webkit-transform: translate(0%,0%);
 }
-.show-video-modal .video-modal .overlay {
+
+.show-video-modal 
+    .video-modal 
+    .overlay {
 	opacity: 1.0;
 }
-.show-video-modal .video-modal-content {
+.show-video-modal 
+    .video-modal-content {
 	transform: translate(0%,0%);
 	-webkit-transform: translate(0%,0%);
 }
