added some comments

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -2,7 +2,7 @@
 @use "variables" as *;
 @use "footer";
 @use "links";
-@use "nav";
+@use "header";
 
 // import fonts
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
@@ -23,11 +23,7 @@ main {
     margin: 0 auto;
 }
 
-header {
-    background-color: black;
-    width: 100%;
-    margin: 0 auto;
-}
+
 
 // footer {
 //     background-color: $footer-bgc;
