--- a/dev/scss/_header.scss
+++ b/dev/scss/_header.scss
@@ -68,6 +68,9 @@
 
 header {
     @include reduce-header-padding;
+    background-color: black;
+    width: 100%;
+    margin: 0 auto;
     color: white;
     padding: 1rem;
     display: flex;
