shop by room and news carousels complete, banner carousel drafted

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,32 +1,46 @@
-@use "resets";
-@use "variables" as *;
+@use 'resets';
+@use 'slick';
+@use 'slick-theme';
+@use 'variables' as *;
+@use 'carousels';
 
 // import fonts
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
 .wrapper {
-    max-width: 1410px;
-    margin: 0 auto;
-    background-color: $wrapper-bgc;
-    font-family: $font
+  max-width: 1410px;
+  margin: 0 auto;
+  background-color: $wrapper-bgc;
+  font-family: $font;
 }
 
 main {
-    background-color: #fff;
-    width: 100%;
-    margin: 0 auto;
+  background-color: #fff;
+  width: 100%;
+  margin: 0 auto;
 }
 
 header {
-    background-color: black;
-    width: 100%;
-    margin: 0 auto;
+  background-color: black;
+  width: 100%;
+  margin: 0 auto;
 }
 
 footer {
-    background-color: $footer-bgc;
-    width: 100%;
-    margin: 0 auto;
+  background-color: $footer-bgc;
+  width: 100%;
+  margin: 0 auto;
+}
+
+h2,
+h3 {
+  text-transform: uppercase;
+  font-weight: normal;
+}
+
+h2 {
+  font-size: 2em;
+  font-weight: 300;
 }
 
 // button {
