--- a/dev/scss/_video.scss
+++ b/dev/scss/_video.scss
@@ -1,3 +1,5 @@
+@use "variables" as *;
+
 .VideoSection {
     position: relative;
     h2 {
@@ -91,10 +93,10 @@
         left: 0;
         z-index: 0;
 
-        background: rgba(255, 255, 255, 0.82); /* overlay color */
+        background: rgba(0, 0, 0, 0.82); /* overlay color */
 
         opacity: 0.0;
-      
+
         -webkit-transition: opacity 0.2s ease-out 0.05s;
         transition: opacity 0.2s ease-out 0.05s;
     }
@@ -107,16 +109,13 @@
 	bottom: auto;
 	left: auto;
 	z-index: 1;
-  
 	margin: 0 auto;
-
+    padding: 2rem;
 	overflow-y: visible;
-
-	background: #000000;
-  
-  width: calc(100% - 12em);
-  height: 0;
-  padding-top: calc((100% - 12em) * 0.5625); /* 16:9 calc */
+	background: #ffffff;
+    width: calc(100% - 12em);
+    height: 0;
+    padding-top: calc((100% - 12em) * 0.5625); /* 16:9 calc */
 }
 
 /* Scaling to fit within the current Viewport size:
@@ -143,13 +142,18 @@
 .close-video-modal {
 	display: block;
     position: absolute;
-    left: 0;
+    right: 0;
     top: -40px;
 
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
-    color: #fff;
+    color: white;
+    background-color: black;
+    padding: 0.5rem;
+}
+.close-video-modal:hover {
+    background-color: $orange;
 }
 
 /* set the iframe element to stretch to fit its parent element */
@@ -160,9 +164,12 @@
 	bottom: 0;
 	left: 0;
 	z-index: 1;
-
-	background: #000;
+	background: #ffffff;
 	box-shadow: 0px 2px 16px rgba(0,0,0,0.5);
+}
+
+#youtube:focus {
+    border: 3px solid #00aaff;
 }
 
 /* show the modal: 
