--- a/dev/scss/_bestSellers.scss
+++ b/dev/scss/_bestSellers.scss
@@ -10,13 +10,17 @@
         img {
             max-width: 9rem;
         }
+        h3 {
+            font-weight: 300;
+        }
         button {
             background-color: $orange;
             color: white;
-            border-radius: 5px;
+            border-radius: 4px;
             border: none;
-            padding: .5rem;
-            margin-bottom: 1rem
+            padding: .5rem .75rem;
+            margin-bottom: 1rem;
+            font-weight: 500;
         }
     }
 }
@@ -65,6 +69,7 @@
                 }
                 button {
                     order: 3;
+                    padding:  .5rem 1.125rem;
                 }
             }
         }
