fixed heading of video section

--- a/dev/scss/_video.scss
+++ b/dev/scss/_video.scss
@@ -6,10 +6,11 @@
     h2 {
         position: absolute;
         margin-top: -.125rem;
-        font-size: 1.5em;
+        font-size: 1.4em;
         font-weight: 600;
         top: 8%;
-        left: 20%;
+        left: 23%;
+        text-align: center;
         text-shadow: 1px 1px white;
     }
     .play-button {
@@ -32,6 +33,15 @@
     }
 }
 
+@media (min-width: 700px) {
+    .VideoSection {
+        h2 {
+            top: 11%;
+            left: 30%;
+            font-size: 2em;
+        }
+    }
+}
 @media (min-width: 900px) {
     .VideoSection {
         h2 {
