--- a/dev/scss/_haley.scss
+++ b/dev/scss/_haley.scss
@@ -291,6 +291,7 @@
   
     @media (min-width: 780px) {
         background-image: url("../images/bg-our-story-section.jpg");
+        padding: 125px;
         padding-bottom: 100px;
     }
   }
