--- a/dev/scss/_video.scss
+++ b/dev/scss/_video.scss
@@ -4,12 +4,15 @@
     position: relative;
     cursor: pointer;
     h2 {
+        display: flex;
+        justify-content: center;
         position: absolute;
+        text-align: center;
         margin-top: -.125rem;
         font-size: 1.5em;
         font-weight: 600;
-        top: 8%;
-        left: 20%;
+        // top: 8%;
+        // left: 20%;
         text-shadow: 1px 1px white;
     }
     .play-button {
@@ -25,8 +28,8 @@
 @media (min-width: 500px) {
     .VideoSection {
         h2 {
-            top: 11%;
-            left: 22%;
+            display: flex;
+            justify-content: center;
             font-size: 2em;
         }
     }
