--- a/dev/scss/_slick-theme.scss
+++ b/dev/scss/_slick-theme.scss
@@ -10,7 +10,7 @@
 $slick-font-path: '../fonts/' !default;
 $slick-font-family: 'slick' !default;
 $slick-loader-path: './' !default;
-$slick-arrow-color: black !default;
+$slick-arrow-color: #fc851e !default;
 $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
 $slick-prev-character: '\2190' !default;
@@ -92,8 +92,8 @@ $slick-opacity-not-active: 0.25 !default;
     opacity: $slick-opacity-not-active;
   }
   &:before {
-    font-family: $slick-font-family;
-    font-size: 20px;
+    // font-family: $slick-font-family;
+    font-size: 30px;
     line-height: 1;
     color: $slick-arrow-color;
     opacity: $slick-opacity-default;
@@ -108,12 +108,12 @@ $slick-opacity-not-active: 0.25 !default;
     left: auto;
     right: -25px;
   }
-  &:before {
-    content: $slick-prev-character;
-    [dir='rtl'] & {
-      content: $slick-next-character;
-    }
-  }
+  // &:before {
+  //   content: $slick-prev-character;
+  //   [dir='rtl'] & {
+  //     content: $slick-next-character;
+  //   }
+  // }
 }
 
 .slick-next {
@@ -122,12 +122,12 @@ $slick-opacity-not-active: 0.25 !default;
     left: -25px;
     right: auto;
   }
-  &:before {
-    content: $slick-next-character;
-    [dir='rtl'] & {
-      content: $slick-prev-character;
-    }
-  }
+  // &:before {
+  //   content: $slick-next-character;
+  //   [dir='rtl'] & {
+  //     content: $slick-prev-character;
+  //   }
+  // }
 }
 
 /* Dots */
