--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -8,3 +8,177 @@ $orange: #fc851e;
 $grey: #666666;
 $footer-bgc: #ebebeb;
 $perimeter-bgc: #303030;
+
+// banner pseudo class, extend at section level
+%banner {
+  display: flex;
+  flex-direction: column;
+
+  div.BannerShadebox {
+    margin: 0;
+    padding: 1em;
+  }
+
+  .BannerItem {
+    min-height: 40vh;
+    padding-left: 25px;
+
+    .BannerTxt {
+      font-weight: 500;
+      text-transform: uppercase;
+      bottom: 20px;
+      left: 20px;
+      color: white;
+      margin-bottom: 0;
+    }
+
+    .BannerSubTxt {
+      margin-top: 4px;
+      margin-bottom: 13px;
+      bottom: 10px;
+      left: 20px;
+      color: white;
+      font-weight: 300;
+    }
+
+    .BannerBtn {
+      font-family: $font;
+      background-color: white;
+      color: black;
+      text-transform: uppercase;
+      padding: 8px;
+      font-size: 16px;
+      padding-left: 20px;
+      padding-right: 20px;
+      border: none;
+      border-radius: 4px;
+      font-weight: 400;
+    }
+  }
+
+  @media (min-width: 500px) {
+    .BannerItem {
+      min-height: 600px;
+      display: flex;
+      align-items: center;
+      position: relative;
+    }
+
+    .BannerShadebox {
+      background-color: rgba(0, 0, 0, 0.5);
+      position: absolute;
+      right: 0;
+      width: 53%;
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      transform: translateY(-25%);
+    }
+
+    .BannerTxt {
+      padding-left: 30px;
+      font-size: 31px;
+      margin-top: 0;
+    }
+    .BannerSubTxt {
+      padding-left: 30px;
+      font-size: 20px;
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+
+    div {
+      min-height: 200px;
+
+      .BannerBtn {
+        padding-left: 29px;
+        padding-right: 29px;
+        margin-left: 30px;
+        padding: 15px;
+        font-size: 19px;
+      }
+    }
+  }
+
+  @media (min-width: 800px) {
+    .BannerItem {
+      min-height: 620px;
+      display: flex;
+      align-items: center;
+    }
+
+    .BannerShadebox {
+      background-color: rgba(0, 0, 0, 0.5);
+      position: absolute;
+      right: 0;
+      width: 47%;
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+    }
+
+    .BannerTxt {
+      padding-left: 30px;
+      font-size: 42px;
+      margin-top: 0;
+    }
+    .BannerSubTxt {
+      padding-left: 30px;
+      font-size: 25px;
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+
+    div {
+      min-height: 200px;
+
+      .BannerBtn {
+        padding: 14px;
+        padding-left: 25px;
+        padding-right: 25px;
+        margin-left: 30px;
+        font-size: 18px;
+      }
+    }
+  }
+
+  @media (min-width: 1000px) {
+    .BannerItem {
+      display: flex;
+      align-items: center;
+    }
+
+    .BannerShadebox {
+      background-color: rgba(0, 0, 0, 0.5);
+      position: absolute;
+      right: 0;
+      width: 35%;
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+    }
+
+    .BannerTxt {
+      padding-left: 30px;
+      font-size: 45px;
+      margin-top: 0;
+    }
+    .BannerSubTxt {
+      padding-left: 30px;
+      font-size: 25px;
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+
+    div {
+      min-height: 27vh;
+      overflow: hidden;
+    }
+  }
+}
