--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,32 +1,33 @@
-@use "resets";
+@use 'resets';
 @use 'slick';
 @use 'slick-theme';
-@use "variables" as *;
-@use "header";
-@use "footer";
+@use 'variables' as *;
+@use 'header';
+@use 'footer';
 @use 'carousels';
-@use "links";
+@use 'links';
 @use 'haley';
-@use "video";
-@use "bestSellers";
+@use 'video';
+@use 'bestSellers';
 
 // import fonts
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
 body {
-    background-color: $perimeter-bgc;
+  background-color: $perimeter-bgc;
+  margin: 0;
 }
 
 .wrapper {
-    max-width: 1410px;
-    margin: 0 auto;
-    background-color: #fff;
-    font-family: $font
+  max-width: 1410px;
+  margin: 0 auto;
+  background-color: #fff;
+  font-family: $font;
 }
 
 main {
-    width: 100%;
-    margin: 0 auto;
+  width: 100%;
+  margin: 0 auto;
 }
 
 h2,
