--- a/dev/scss/_haley.scss
+++ b/dev/scss/_haley.scss
@@ -25,7 +25,7 @@
   }
 
   div {
-    min-height: 40vh;
+    min-height: 400px;
     padding-left: 25px;
     line-height: 20px;
 
@@ -104,7 +104,7 @@
     }
 
     div {
-      min-height: 27vh;
+      min-height: 200px;
 
       .FeaturedProductsBtn {
         padding-left: 30px;
