--- a/dev/scss/_header.scss
+++ b/dev/scss/_header.scss
@@ -36,6 +36,7 @@
     @media (min-width: 1000px) {
         width: 700px;
         height: 100%;
+        max-height: fit-content;
         visibility: visible;
         ul {
             display: flex;
@@ -83,9 +84,9 @@ header {
         width: 100%;
         visibility: hidden;
         overflow: hidden;
-        height: 0;
+        max-height: 0;
         &.activated {
-            transition: height 0.3s ease;
+            transition: max-height 0.3s ease, visibility 1s ease;
         }
         ul {
             padding: 1rem 0 1rem 0;
@@ -168,8 +169,9 @@ header {
     &.show {
         nav {
             visibility: visible;
-            transition: height 0.3s ease;
+            transition: max-height 1s ease;
             height: fit-content;
+            max-height: 1000px; // larger than what we need to allow transition to actual height of content
         }
         .btn-burger-content {
             &-bar {
