--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -9,7 +9,7 @@ $grey: #666666;
 $footer-bgc: #ebebeb;
 $perimeter-bgc: #303030;
 
-// banner pseudo class, extend at section level
+// banner pseudo class
 %banner {
   display: flex;
   flex-direction: column;
@@ -20,7 +20,7 @@ $perimeter-bgc: #303030;
   }
 
   .BannerItem {
-    min-height: 40vh;
+    min-height: 400px;
     padding-left: 25px;
 
     .BannerTxt {
@@ -43,8 +43,6 @@ $perimeter-bgc: #303030;
 
     .BannerBtn {
       font-family: $font;
-      background-color: white;
-      color: black;
       text-transform: uppercase;
       padding: 8px;
       font-size: 16px;
@@ -105,37 +103,20 @@ $perimeter-bgc: #303030;
   @media (min-width: 800px) {
     .BannerItem {
       min-height: 620px;
-      display: flex;
-      align-items: center;
     }
 
     .BannerShadebox {
-      background-color: rgba(0, 0, 0, 0.5);
-      position: absolute;
-      right: 0;
       width: 47%;
-      text-align: left;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: center;
     }
 
     .BannerTxt {
-      padding-left: 30px;
       font-size: 42px;
-      margin-top: 0;
     }
     .BannerSubTxt {
-      padding-left: 30px;
       font-size: 25px;
-      padding-top: 15px;
-      padding-bottom: 15px;
     }
 
     div {
-      min-height: 200px;
-
       .BannerBtn {
         padding: 14px;
         padding-left: 25px;
@@ -147,33 +128,15 @@ $perimeter-bgc: #303030;
   }
 
   @media (min-width: 1000px) {
-    .BannerItem {
-      display: flex;
-      align-items: center;
-    }
-
     .BannerShadebox {
-      background-color: rgba(0, 0, 0, 0.5);
-      position: absolute;
-      right: 0;
       width: 35%;
-      text-align: left;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: center;
     }
 
     .BannerTxt {
-      padding-left: 30px;
       font-size: 45px;
-      margin-top: 0;
     }
     .BannerSubTxt {
-      padding-left: 30px;
       font-size: 25px;
-      padding-top: 15px;
-      padding-bottom: 15px;
     }
 
     div {
