--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -6,7 +6,8 @@
 @use 'footer';
 @use 'carousels';
 @use 'links';
-@use 'haley';
+@use 'featuredProducts';
+@use '_ourStory';
 @use 'video';
 @use 'bestSellers';
 
