--- a/dev/scss/_video.scss
+++ b/dev/scss/_video.scss
@@ -2,10 +2,16 @@
 
 .VideoSection {
   position: relative;
+  cursor: pointer;
   h2 {
     position: absolute;
     margin-top: -0.125rem;
-    left: 30%;
+    font-size: 1.4em;
+    font-weight: 600;
+    top: 8%;
+    left: 23%;
+    text-align: center;
+    text-shadow: 1px 1px white;
   }
   .play-button {
     position: absolute;
@@ -18,7 +24,9 @@
 @media (min-width: 500px) {
   .VideoSection {
     h2 {
-      left: 35%;
+      top: 11%;
+      left: 22%;
+      font-size: 2em;
     }
   }
 }
@@ -35,12 +43,14 @@
 @media (min-width: 900px) {
   .VideoSection {
     h2 {
-      left: 40%;
+      top: 11%;
+      left: 25%;
+      font-size: 3em;
     }
     .play-button {
-      top: 50%;
-      left: 50%;
-      max-width: 7rem;
+      top: 40%;
+      left: 45%;
+      max-width: 9rem;
     }
   }
 }
@@ -48,7 +58,9 @@
 @media (min-width: 1200px) {
   .VideoSection {
     h2 {
-      left: 45%;
+      top: 5%;
+      left: 32%;
+      font-size: 3.5em;
     }
   }
 }
@@ -148,8 +160,8 @@
   display: block;
   position: absolute;
   right: 0;
-  top: -40px;
-
+  top: -2px;
+  z-index: 1500;
   text-decoration: none;
   font-size: 20px;
   font-weight: bold;
@@ -171,6 +183,9 @@
   z-index: 1;
   background: #ffffff;
   box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.5);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 #youtube:focus {
